@@ -1,6 +1,6 @@
 Package: Matrix
 Version: 1.4-2
-Date: 2022-08-26
+Date: 2022-08-29
 Priority: recommended
 Title: Sparse and Dense Matrix Classes and Methods
 Contact: Matrix-authors@R-project.org
